--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.303.0",
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.6.0",
