--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
+    "@types/pg": "^8.15.4",
     "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
@@ -32,6 +33,7 @@
     "next": "^15.3.4",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
+    "pg": "^8.16.3",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.6.0",
